fix: properly center search bar on mobile with hamburger toggle

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -63,11 +63,12 @@
 
   .l-nav-wrapper {
     position: relative;
-    padding-right: 50px;
+    width: 100%;
+    padding-top: 50px;
   }
 
   #search {
-    margin-top: 50px;
+    margin: 10px auto;
   }
 }
 
